--- a/SecMngAdmin/SecMngAdmin.vcxproj.filters
+++ b/SecMngAdmin/SecMngAdmin.vcxproj.filters
@@ -57,6 +57,15 @@
     <ClInclude Include="FormBackground.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CfgView.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DlgNetInfo.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SysAll.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SecMngAdmin.cpp">
@@ -87,6 +96,15 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FormBackground.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CfgView.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DlgNetInfo.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="SysAll.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -135,6 +153,9 @@
       <Filter>资源文件</Filter>
     </Image>
     <Image Include="res\user.ico">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\background.bmp">
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
