--- a/SecMngAdmin/SecMngAdmin.rc
+++ b/SecMngAdmin/SecMngAdmin.rc
@@ -169,10 +169,31 @@ IDD_DIALOG_CFG DIALOGEX 0, 0, 465, 292
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CTEXT           "服务器配置管理界面",IDC_STATIC,89,67,94,29
-    CONTROL         "复选",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,65,32,10
-    CONTROL         "单选",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON,267,92,32,10
-    PUSHBUTTON      "确定",IDC_BUTTON1,103,168,50,14
+    DEFPUSHBUTTON   "保存",IDOK,372,92,66,16
+    RTEXT           "数据源",IDC_STATIC,126,42,25,8
+    EDITTEXT        IDC_EDIT_DSN,159,40,132,14,ES_AUTOHSCROLL
+    RTEXT           "用户名",IDC_STATIC,127,67,25,8
+    EDITTEXT        IDC_EDIT_UID,159,66,132,14,ES_AUTOHSCROLL
+    RTEXT           "密码",IDC_STATIC,130,95,17,8
+    EDITTEXT        IDC_EDIT_PWD,159,93,132,14,ES_AUTOHSCROLL
+    RTEXT           "数据源参数配置",IDC_STATIC,48,23,57,8
+    DEFPUSHBUTTON   "保存",IDOK2,372,183,66,16
+    RTEXT           "服务器IP",IDC_STATIC,119,132,32,8
+    EDITTEXT        IDC_EDIT_DSN2,160,131,132,14,ES_AUTOHSCROLL
+    RTEXT           "服务器Port",IDC_STATIC,83,158,71,8
+    EDITTEXT        IDC_EDIT_UID2,160,156,132,14,ES_AUTOHSCROLL
+    RTEXT           "最大网点数",IDC_STATIC,116,185,41,8
+    EDITTEXT        IDC_EDIT_PWD2,160,184,132,14,ES_AUTOHSCROLL
+    RTEXT           "服务器启动参数配置",IDC_STATIC,45,112,73,8
+    DEFPUSHBUTTON   "保存",IDOK3,372,268,66,16
+    RTEXT           "名称",IDC_STATIC,121,217,17,8
+    EDITTEXT        IDC_EDIT_DSN3,160,217,132,14,ES_AUTOHSCROLL
+    RTEXT           "网点编号",IDC_STATIC,78,244,71,8
+    EDITTEXT        IDC_EDIT_UID3,160,241,132,14,ES_AUTOHSCROLL
+    RTEXT           "网点状态",IDC_STATIC,116,271,33,8
+    EDITTEXT        IDC_EDIT_PWD3,160,270,132,14,ES_AUTOHSCROLL
+    RTEXT           "服务器网点信息配置",IDC_STATIC,46,198,73,8
+    LTEXT           "后台参数配置--------------------------------------------------------------------------------------------------------",IDC_STATIC,33,6,326,8
 END
 
 IDD_DIALOG_NETMNG DIALOGEX 0, 0, 460, 286
@@ -190,6 +211,23 @@ IDD_DIALOG_SYSALL DIALOGEX 0, 0, 468, 275
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
+END
+
+IDD_DIALOG_INITDB DIALOGEX 0, 0, 309, 176
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "配置数据库信息"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "确定",IDOK,136,148,50,14
+    PUSHBUTTON      "取消",IDCANCEL,202,148,50,14
+    RTEXT           "数据源",IDC_STATIC,69,50,25,8
+    EDITTEXT        IDC_EDIT_DSN,102,48,132,14,ES_AUTOHSCROLL
+    RTEXT           "用户名",IDC_STATIC,70,75,25,8
+    EDITTEXT        IDC_EDIT_UID,102,74,132,14,ES_AUTOHSCROLL
+    RTEXT           "密码",IDC_STATIC,70,103,17,8
+    EDITTEXT        IDC_EDIT_PWD,101,101,132,14,ES_AUTOHSCROLL
+    RTEXT           "输入数据源信息",IDC_STATIC,121,19,57,8
+    PUSHBUTTON      "测试",IDC_BUTTON_LINKTEST,70,148,50,14
 END
 
 
@@ -269,6 +307,14 @@ BEGIN
         RIGHTMARGIN, 466
         BOTTOMMARGIN, 274
     END
+
+    IDD_DIALOG_INITDB, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 302
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 169
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -306,6 +352,11 @@ BEGIN
 END
 
 IDD_DIALOG_SYSALL AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_DIALOG_INITDB AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
