--- a/SecMngAdmin/SecMngAdmin.rc
+++ b/SecMngAdmin/SecMngAdmin.rc
@@ -169,7 +169,7 @@ IDD_DIALOG_CFG DIALOGEX 0, 0, 465, 292
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "保存",IDOK,372,92,66,16
+    DEFPUSHBUTTON   "保存",IDOK,365,92,66,16
     RTEXT           "数据源",IDC_STATIC,126,42,25,8
     EDITTEXT        IDC_EDIT_DSN,159,40,132,14,ES_AUTOHSCROLL
     RTEXT           "用户名",IDC_STATIC,127,67,25,8
@@ -177,15 +177,15 @@ BEGIN
     RTEXT           "密码",IDC_STATIC,130,95,17,8
     EDITTEXT        IDC_EDIT_PWD,159,93,132,14,ES_AUTOHSCROLL
     RTEXT           "数据源参数配置",IDC_STATIC,48,23,57,8
-    DEFPUSHBUTTON   "保存",IDOK2,372,183,66,16
+    DEFPUSHBUTTON   "保存",IDOK_SRVCFG,367,183,66,16
     RTEXT           "服务器IP",IDC_STATIC,119,132,32,8
-    EDITTEXT        IDC_EDIT_DSN2,160,131,132,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_IP,160,131,132,14,ES_AUTOHSCROLL
     RTEXT           "服务器Port",IDC_STATIC,83,158,71,8
-    EDITTEXT        IDC_EDIT_UID2,160,156,132,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PORT,160,156,132,14,ES_AUTOHSCROLL
     RTEXT           "最大网点数",IDC_STATIC,116,185,41,8
-    EDITTEXT        IDC_EDIT_PWD2,160,184,132,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_MAXNODE,160,184,132,14,ES_AUTOHSCROLL
     RTEXT           "服务器启动参数配置",IDC_STATIC,45,112,73,8
-    DEFPUSHBUTTON   "保存",IDOK3,372,268,66,16
+    DEFPUSHBUTTON   "保存",IDOK3,368,268,66,16
     RTEXT           "名称",IDC_STATIC,121,217,17,8
     EDITTEXT        IDC_EDIT_DSN3,160,217,132,14,ES_AUTOHSCROLL
     RTEXT           "网点编号",IDC_STATIC,78,244,71,8
@@ -193,7 +193,7 @@ BEGIN
     RTEXT           "网点状态",IDC_STATIC,116,271,33,8
     EDITTEXT        IDC_EDIT_PWD3,160,270,132,14,ES_AUTOHSCROLL
     RTEXT           "服务器网点信息配置",IDC_STATIC,46,198,73,8
-    LTEXT           "后台参数配置--------------------------------------------------------------------------------------------------------",IDC_STATIC,33,6,326,8
+    LTEXT           "后台参数配置------------------------------------------------------------------------------------------------------------------------------------------------------",IDC_STATIC,10,6,452,8
 END
 
 IDD_DIALOG_NETMNG DIALOGEX 0, 0, 460, 286
