网点信息管理 增删改查功能实现

--- a/SecMngAdmin/SecMngAdmin.rc
+++ b/SecMngAdmin/SecMngAdmin.rc
@@ -187,11 +187,11 @@ BEGIN
     RTEXT           "服务器启动参数配置",IDC_STATIC,45,112,73,8
     DEFPUSHBUTTON   "保存",IDOK3,368,268,66,16
     RTEXT           "名称",IDC_STATIC,121,217,17,8
-    EDITTEXT        IDC_EDIT_DSN3,160,217,132,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_NODENAME,160,217,132,14,ES_AUTOHSCROLL
     RTEXT           "网点编号",IDC_STATIC,78,244,71,8
-    EDITTEXT        IDC_EDIT_UID3,160,241,132,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_NODEID,160,241,132,14,ES_AUTOHSCROLL
     RTEXT           "网点状态",IDC_STATIC,116,271,33,8
-    EDITTEXT        IDC_EDIT_PWD3,160,270,132,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_NODESTATUS,160,270,132,14,ES_AUTOHSCROLL
     RTEXT           "服务器网点信息配置",IDC_STATIC,46,198,73,8
     LTEXT           "后台参数配置------------------------------------------------------------------------------------------------------------------------------------------------------",IDC_STATIC,10,6,452,8
 END
@@ -201,7 +201,7 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "创建网点",IDC_BUTTON1,92,192,60,19
-    PUSHBUTTON      "修改网点",IDC_BUTTON2,186,192,61,19
+    PUSHBUTTON      "修改网点",IDC_BUTTON_EDITNODE,186,192,61,19
     PUSHBUTTON      "删除网点",IDC_BUTTON3,283,192,65,19
     PUSHBUTTON      "授权码",IDC_BUTTON4,386,192,64,19
     CONTROL         "",IDC_LIST_SECNODE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,15,537,154
@@ -248,7 +248,27 @@ END
 
 IDD_DIALOG_AddNetNode DIALOGEX 0, 0, 303, 189
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "增加网点"
+CAPTION "编辑网点"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "确定",IDOK,169,167,50,14
+    PUSHBUTTON      "取消",IDCANCEL,226,166,50,14
+    GROUPBOX        "请输入网点详细信息",IDC_STATIC,23,18,259,142
+    LTEXT           "网点编号",IDC_STATIC,80,41,33,8
+    EDITTEXT        IDC_EDIT_NUM,126,38,109,15,ES_AUTOHSCROLL
+    LTEXT           "网点名称",IDC_STATIC,80,63,33,8
+    EDITTEXT        IDC_EDIT_NAME,126,60,109,15,ES_AUTOHSCROLL
+    LTEXT           "网点描述",IDC_STATIC,80,85,33,8
+    EDITTEXT        IDC_EDIT_DESR,126,82,109,15,ES_AUTOHSCROLL
+    LTEXT           "网点授权码",IDC_STATIC,76,106,42,8
+    EDITTEXT        IDC_EDIT_AUTOR,126,103,109,15,ES_AUTOHSCROLL
+    LTEXT           "网点状态",IDC_STATIC,80,128,33,8
+    EDITTEXT        IDC_EDIT_STATE,126,125,109,15,ES_AUTOHSCROLL
+END
+
+IDD_DIALOG_EDITNODE DIALOGEX 0, 0, 303, 196
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "修改网点信息"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "确定",IDOK,169,167,50,14
@@ -360,6 +380,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 182
     END
+
+    IDD_DIALOG_EDITNODE, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 296
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 195
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -407,6 +435,11 @@ BEGIN
 END
 
 IDD_DIALOG_AddNetNode AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_DIALOG_EDITNODE AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
