网点管理完成，，下一步该进行客户端的制作，，同样滴 跟网点管理集成到同一个客户端里，做成一个抽屉 相当于偷了个懒

--- a/SecMngAdmin/SecMngAdmin.rc
+++ b/SecMngAdmin/SecMngAdmin.rc
@@ -169,7 +169,7 @@ IDD_DIALOG_CFG DIALOGEX 0, 0, 465, 292
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "保存",IDOK,365,92,66,16
+    DEFPUSHBUTTON   "保存",IDOK_DSN_UID_PWD,365,92,66,16
     RTEXT           "数据源",IDC_STATIC,126,42,25,8
     EDITTEXT        IDC_EDIT_DSN,159,40,132,14,ES_AUTOHSCROLL
     RTEXT           "用户名",IDC_STATIC,127,67,25,8
@@ -186,11 +186,11 @@ BEGIN
     EDITTEXT        IDC_EDIT_MAXNODE,160,184,132,14,ES_AUTOHSCROLL
     RTEXT           "服务器启动参数配置",IDC_STATIC,45,112,73,8
     DEFPUSHBUTTON   "保存",IDOK3,368,268,66,16
-    RTEXT           "名称",IDC_STATIC,121,217,17,8
+    RTEXT           "网点编号",IDC_STATIC,115,217,33,8
     EDITTEXT        IDC_EDIT_NODENAME,160,217,132,14,ES_AUTOHSCROLL
-    RTEXT           "网点编号",IDC_STATIC,78,244,71,8
+    RTEXT           "网点名称",IDC_STATIC,78,244,71,8
     EDITTEXT        IDC_EDIT_NODEID,160,241,132,14,ES_AUTOHSCROLL
-    RTEXT           "网点状态",IDC_STATIC,116,271,33,8
+    RTEXT           "网点描述",IDC_STATIC,116,271,33,8
     EDITTEXT        IDC_EDIT_NODESTATUS,160,270,132,14,ES_AUTOHSCROLL
     RTEXT           "服务器网点信息配置",IDC_STATIC,46,198,73,8
     LTEXT           "后台参数配置------------------------------------------------------------------------------------------------------------------------------------------------------",IDC_STATIC,10,6,452,8
@@ -207,8 +207,8 @@ BEGIN
     CONTROL         "",IDC_LIST_SECNODE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,15,537,154
     GROUPBOX        "网点信息操作",IDC_STATIC,6,175,539,44
     CONTROL         "时间段查询",IDC_CHECK_TIME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,81,253,56,10
-    CONTROL         "",IDC_DATETIMEPICKER1,"SysDateTimePick32",DTS_RIGHTALIGN | DTS_LONGDATEFORMAT | WS_TABSTOP,143,250,100,15
-    CONTROL         "",IDC_DATETIMEPICKER2,"SysDateTimePick32",DTS_RIGHTALIGN | DTS_LONGDATEFORMAT | WS_TABSTOP,276,250,100,15
+    CONTROL         "",IDC_DATETIMEPICKER1,"SysDateTimePick32",DTS_RIGHTALIGN | DTS_LONGDATEFORMAT | WS_TABSTOP,155,250,100,15
+    CONTROL         "",IDC_DATETIMEPICKER2,"SysDateTimePick32",DTS_RIGHTALIGN | DTS_LONGDATEFORMAT | WS_TABSTOP,291,250,100,15
     GROUPBOX        "网点信息查询",IDC_STATIC,6,223,540,102
     GROUPBOX        "模糊查询",IDC_STATIC,42,235,462,40
     GROUPBOX        "精确查询",IDC_STATIC,42,281,462,40
@@ -221,6 +221,8 @@ BEGIN
     PUSHBUTTON      "查询",IDC_BUTTON_SEARCHINFO,439,257,50,14
     PUSHBUTTON      "查询",IDC_BUTTON_EXACTSEARCH,441,289,50,14
     PUSHBUTTON      "查询",IDC_BUTTON_IDSEARCH,441,304,50,14
+    LTEXT           "从",IDC_STATIC,139,253,9,8
+    LTEXT           "到",IDC_STATIC,270,253,9,8
 END
 
 IDD_DIALOG_SYSALL DIALOGEX 0, 0, 468, 275
@@ -284,6 +286,18 @@ BEGIN
     EDITTEXT        IDC_EDIT_AUTOR,126,103,109,15,ES_AUTOHSCROLL
     LTEXT           "网点状态",IDC_STATIC,80,128,33,8
     EDITTEXT        IDC_EDIT_STATE,126,125,109,15,ES_AUTOHSCROLL
+END
+
+IDD_DIALOG_VIEWCLIENT DIALOGEX 0, 0, 618, 337
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    PUSHBUTTON      "密钥协商",IDC_BUTTON1,114,293,60,19
+    PUSHBUTTON      "密钥校验",IDC_BUTTON_EDITNODE,208,293,61,19
+    PUSHBUTTON      "密钥注销",IDC_BUTTON3,306,293,65,19
+    PUSHBUTTON      "系统初始化",IDC_BUTTON4,408,293,64,19
+    CONTROL         "",IDC_LIST_SECNODE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,14,9,584,260
+    GROUPBOX        "网点操作命令组",IDC_STATIC,14,276,583,44
 END
 
 
@@ -388,6 +402,13 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 195
     END
+
+    IDD_DIALOG_VIEWCLIENT, DIALOG
+    BEGIN
+        RIGHTMARGIN, 613
+        TOPMARGIN, 2
+        BOTTOMMARGIN, 333
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -440,6 +461,11 @@ BEGIN
 END
 
 IDD_DIALOG_EDITNODE AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_DIALOG_VIEWCLIENT AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
